--- a/my-app/src/components/index.css
+++ b/my-app/src/components/index.css
@@ -11,3 +11,63 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bookCard {
+  text-align: center;
+  border: rgb(255, 255, 255) solid 1px;
+  background-color: rgba(255, 209, 23, 0.927);
+  padding: 1rem;
+  width: 18rem;
+  height: 25rem;
+  display: inline-grid;
+  margin: 1rem 2rem;
+  box-shadow: 3px 4px #4be0b1;
+}
+
+.bookCover {
+  justify-self: center;
+  height: 15rem;
+  width: auto;
+}
+
+h2 {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  font-weight: 900;
+  color:rgb(0, 144, 247)
+}
+
+h5 {
+  margin: .5rem;
+  font-weight: 900;
+  color:rgb(0, 144, 247)
+}
+
+p {
+  margin: .5rem;
+  font-weight: 900;
+  color:rgb(0, 144, 247)
+}
+
+.details-btn {
+  border: white;
+  font-weight: 900;
+  height: 2rem;
+  background-color: aquamarine;
+  color:rgb(0, 144, 247)
+}
+
+.like-btn {
+  margin-left: .5rem;
+  border: rgba(255, 209, 23, 0.927);
+  font-weight: 900;
+  height: 2rem;
+  background-color: rgba(255, 209, 23, 0.927);
+  color:rgb(0, 144, 247)
+}
+
+button:hover {
+  background-color: whitesmoke;
+  border: aquamarine solid 1px;
+  color: rgb(0, 144, 247);
+}
